BUG FIX : letter-spacing

--- a/src/components/score-board/score-board.css
+++ b/src/components/score-board/score-board.css
@@ -20,7 +20,7 @@
   font-style: normal;
   font-stretch: normal;
   line-height: normal;
-  letter-spacing: 0.0.5em;
+  /* letter-spacing: 0.0.5em; */
   /* text-align: left; */
   color: #e5d9cf;
 }
